--- a/Tests/MockLibTest.dproj
+++ b/Tests/MockLibTest.dproj
@@ -122,6 +122,7 @@
         <DCCReference Include="..\Sources\MockTools.Core.Types.pas"/>
         <DCCReference Include="CreateSetupTest.pas"/>
         <DCCReference Include="MockTarget.pas"/>
+        <DCCReference Include="CreateExpectRolesTest.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
