--- a/Tests/MockLibTest.dproj
+++ b/Tests/MockLibTest.dproj
@@ -123,6 +123,7 @@
         <DCCReference Include="CreateSetupTest.pas"/>
         <DCCReference Include="MockTarget.pas"/>
         <DCCReference Include="CreateExpectRolesTest.pas"/>
+        <DCCReference Include="..\Sources\MockTools.Mocks.CoreExpect.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
