--- a/Tests/MockLibTest.dproj
+++ b/Tests/MockLibTest.dproj
@@ -124,6 +124,7 @@
         <DCCReference Include="MockTarget.pas"/>
         <DCCReference Include="CreateExpectRolesTest.pas"/>
         <DCCReference Include="..\Sources\MockTools.Mocks.CoreExpect.pas"/>
+        <DCCReference Include="InterfaceRecordingProxyTest.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
