Add other interface implementation feture

--- a/.bzrignore
+++ b/.bzrignore
@@ -4,3 +4,4 @@ MockLib.identcache
 Tests/MockLibTest.dproj.local
 Tests/MockLibTest_project.tvsconfig
 Tests/MockLibTest.identcache
+Tests/DelphiMockInterfaceProxyTest.pas
