--- a/Tests/MockLibTest.dproj
+++ b/Tests/MockLibTest.dproj
@@ -128,6 +128,7 @@
         <DCCReference Include="InterfaceRecordingProxyTest.pas"/>
         <DCCReference Include="MockTest.pas"/>
         <DCCReference Include="ExpectConbinationTest.pas"/>
+        <DCCReference Include="..\Sources\MockTools.FormatHelper.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
